--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,8 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
-
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
-  maxInstances: 1
+  minInstances: 0
+  maxInstances: 100
+  cpu: 1
+  memoryMiB: 512
+concurrency: 80
